--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
-    "howlongtobeat": "^1.4.1"
+    "howlongtobeat": "^1.4.1",
+    "puppeteer": "^21.5.2"
   }
 }
