--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "howlongtobeat": "^1.4.1",
+    "node-schedule": "^2.1.1",
     "puppeteer": "^21.5.2"
   }
 }
