--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "RESTful API that uses Christian Katzorke's HowLongToBeat API to make GET requests of games.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
