--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "hltb_restfulapi",
-  "version": "1.0.0",
-  "description": "RESTful API that uses Christian Katzorke's HowLongToBeat API to make GET requests of games.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "howlongtobeat": "^1.4.1",
-    "node-schedule": "^2.1.1",
-    "puppeteer": "^21.5.2"
-  }
+	"name": "hltb_restfulapi",
+	"version": "1.0.0",
+	"description": "RESTful API that uses Christian Katzorke's HowLongToBeat API to make GET requests of games.",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cheerio": "^1.0.0-rc.12",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"howlongtobeat": "^1.4.1",
+		"node-schedule": "^2.1.1",
+		"puppeteer": "16.1.0"
+	}
 }
