--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
 		"express": "^4.18.2",
 		"howlongtobeat": "^1.4.1",
 		"node-schedule": "^2.1.1",
-		"puppeteer": "16.1.0"
+		"puppeteer": "^19.11.1"
 	}
 }
