--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
+		"start": "node index"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"cheerio": "^1.0.0-rc.12",
 		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"howlongtobeat": "^1.4.1",
 		"node-schedule": "^2.1.1",
