--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"start": "node app"
 	},
 	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"author": "Emilio Blacksmith",
+	"license": "MIT",
 	"dependencies": {
 		"axios": "^1.6.7",
 		"cheerio": "^1.0.0-rc.12",
